--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "next-themes": "^0.2.1",
