--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/ssr": "latest",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "latest",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
