--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "latest",
+    "framer-motion": "^12.23.16",
     "lucide-react": "^0.292.0",
     "next": "^14.2.32",
     "next-themes": "^0.2.1",
